<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".kedua.AlertDialogActivity">

    <Button
        android:id="@+id/alert_satu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_standard"/>

    <Button
        android:id="@+id/alert_dua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dua"/>

    <Button
        android:id="@+id/alert_tiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_tiga"/>

    <Button
        android:id="@+id/alert_empat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_empat"/>

    <Button
        android:id="@+id/alert_lima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_fragment"/>
</LinearLayout>