<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".kedua.tugas.TugasActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/struk_belanja"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/et_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="barang"
        android:inputType="text"
        android:hint="@string/barang"/>

    <EditText
        android:id="@+id/et_jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="jumlah"
        android:inputType="number"
        android:hint="@string/jumlah"/>

    <EditText
        android:id="@+id/et_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="harga"
        android:inputType="number"
        android:hint="@string/harga"/>

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hitung_standard"/>

    <Button
        android:id="@+id/btn_hitungFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hitung_fragment"/>

    <TextView
        android:id="@+id/tv_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_kembalian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
</LinearLayout>